files/script/test_all/parse_error/comment/test_comment_error1.ll


def main()
{
}
#script("script/test_all/parse_error/comment/test_comment_error1.ll")